@@ -1,5 +1,7 @@
 2008-04-05  Bruno Haible  <bruno@clisp.org>
 
+	* gnulib-m4/gnulib-cache.m4: New file, generated by gnulib-tool.
+
 	* autogen.sh: New file.
 	* configure.ac: New file.
 	* build-aux/fixaclocal: New file, from GNU gettext.
